feat: [CHK-4224] bump java version from 17 to 21 (#188)
* feat: bump java version from 17 to 21

* chore: pipeline scan failure fix

* chore: debug pipeline scan failures

* chore: remove debug steps in pipeline

* chore: use java21 ecommerce commons

* chore: jacoco version

* chore: java version with var

* chore: bump ecommerce commons version